--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,33 @@
 html {
   font-size: 62, 5%;
 }
+
+nav {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  gap: 10px;
+  background-color: black;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.nav-item {
+  text-decoration: none;
+  display: inline-block;
+  color: white;
+  font-size: 1.5rem;
+  height: 100%;
+}
+
+.list-items {
+  display: flex;
+  gap: 20px;
+  text-decoration: none;
+}
+
+.list-items a {
+  text-decoration: none;
+  color: white;
+}
